assets/css/variables.scss
:root {

    /* === Cover / Landing area === */
    --cover-text-color: white;
    /* Used for Landing screen menu buttons, but potentially usable for highlighting other things */
    --highlight: #5d4c42;
    --highlight-contrast: var(--cover-text-color);
    /*iverse colors used for :hover */
    --highlight-inverse: var(--cover-text-color);
    --highlight-inverse-contrast: white;

    /* visual guard around title and description, when the feature is enabled */
    --cover-title-and-description-guard-bg-color: rgba(255, 255, 255, 0.6);
    --cover-title-text-shadow: white 0px 0px 7px;


    /* === sticky top/left navigation menus === */
    --sticky-menu-text-color: #5d4c42;


    /* === Alternating content (post) sections  === */
    /* Light section - text color */
    --section-light-text-color: #3a4145;
    /* Light section - background color */
    --section-light-bg-color: #f2efe8;

    /* Dark section - text color */
    --section-dark-text-color: var(--section-light-bg-color);
    /* Dark section - background color */
    --section-dark-bg-color: #5d4c42;

    /* Light&Dark section >quote. Supressive color, compared to 'Light section - text color'*/
    --section-uni-quote: grey;
    /* Light&Dark section `code` a bit darker than 'Light section - background color' */
    --section-uni-code-bg-color: #e0ded7;

    /* === Single pages=== */
    --single-page-text-color: var(--section-light-text-color);
    --single-page-bg-color: var(--section-light-bg-color);

    /* === Footer === */
    --footer-color-background: #22343a;
    --footer-color: #bbc7cc;

    /* === Lists === */
    /* define list element for unnumbered lists, leave empty for default list element */
    --ul-li-icon: fa-asterisk;
}


#site-head {
    background-size: contain !important;
    a.btn {
        color: var(--highlight) !important;
        border: 2px solid var(--highlight) !important;
        background-color: transparent !important;
    }
    a.btn:hover {
        color: var(--highlight-contrast) !important;
        border: 2px solid var(--highlight) !important;
        background-color: var(--highlight) !important;
    }
    .vertical {
        vertical-align: bottom !important;
    }
    #site-head-content {
        margin-bottom: 20px !important;
    }
}

a#header-arrow {
    display: none !important;
}

.post-holder.dark {
    a:hover {
        color: var(--highlight-contrast) !important;
    }
}

